# Ikaros

./: .gitignore  Cargo.toml  Idea.txt  README.md  TODO.txt  bisect.py  bisect_scala.py  bug_stats.py  clear_stats.py  collect_stats.sh  get_stats.sh  mutations.txt  plotter.py  remove_incorrect.sh  researchquestions.txt  reserachquestions.txt  run_job.sh  run_job_local.sh  runcvc5.sh  setupcron.sh
.VSCodeCounter/2024-04-16_16-46-34/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-06-25_14-19-50/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.metals/: metals.mv.db
src/: contextgen.rs  generators.rs  ir.rs  main.rs  matches.rs  mutate.rs  paths.rs  reduction.rs  statistics.rs  types.rs
src/contextgen/: context.rs  contextgenerator.rs
src/generators/: matchgen.rs  matchgen_args.rs  programgen.rs  random_matchgen.rs  random_matchgen_args.rs  typegen.rs  typegen_args.rs  z3checker.rs
src/ir/: base.rs  id.rs  ir_type.rs  variant.rs
src/matches/: expression.rs  pattern.rs  statements.rs
src/mutate/: mutator.rs
src/reduction/: change.rs  hierarchy.rs  reducer.rs  restructed_prog.rs  restructer.rs  tester.rs
src/statistics/: constructionstats.rs  matchstats.rs  z3stats.rs
src/types/: constraints.rs  languages.rs  template.rs  type_graph.rs  type_template.rs  type_trait.rs  variance.rs
src/types/languages/: haskell.rs  java.rs  scala.rs
src/types/type_graph/: edge.rs  graph.rs  node.rs
temp/: program_8_changed.java  temp.txt
(+57 files in other folders)
