[package]
name = "ikaros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
graphviz-rust = "0.9.0"
dot-generator = "0.2.0"
dot-structures = "0.1.1"
z3 = "0.12.1"
regex = "1.10.5"
